--- a/ecran.css
+++ b/ecran.css
@@ -1,7 +1,21 @@
+body {
+  overflow: hidden;
+}
+
 *, *:before, *:after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+button {
+  position: absolute;
+  width: 400px;
+  height: 300px;
+  margin-bottom: 12%;
+  margin-left: 4%;
+  border: none;
+  background-color: red;
 }
 
 body {
