--- a/ecran.scss
+++ b/ecran.scss
@@ -22,9 +22,8 @@ a{
   position: absolute;
   width: 400px;
   height:300px;
-  margin-bottom: 12%;
-  margin-left: 4%;
-  border:black;
+  margin: 50%;
+  border:black 10px;
 }
 
 
