--- a/page2.scss
+++ b/page2.scss
@@ -24,7 +24,7 @@ html{
 
 
 #principale{
-    height:93vmin;
+    height:100%;
 }
 
 
@@ -76,5 +76,4 @@ a {
   font-size: 6vmin;
   text-decoration: none;
   color: black;
-
 }
